--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body class="w-screen h-screen  items-stretch justify-stretch bg-sky-300 grid grid-cols-[1fr,4fr,1fr] grid-rows-[11fr,1fr]">
     <div id="firsPlayerScore" class="justify-center items-center self-center justify-self-center text-7xl text-white font-extrabold">
       <div >X</div>
-      <div id="Xscore"></div>
+      <div id="Xscore" class="text-black text-center"></div>
     </div>
     <div id="board-container" class="h-fit w-96 bg-black rounded-lg shadow-lg grid-cols-3 grid content-stretch justify-stretch  gap-1 p-1 self-center justify-self-center" >
         <div class="bg-sky-200 box-border overflow-clip rounded-lg text-center text-5xl text-white font-bold py-10 h-32 " data-array="0"></div>
@@ -31,7 +31,7 @@
     </dialog>
     <div id="seconedPlayerScore" class="justify-center items-center self-center justify-self-center text-7xl text-white font-extrabold">
       <div>O</div>
-      <div id="Oscore"></div>
+      <div id="Oscore" class="text-black text-center"></div>
     </div>
     <div class="font-semibold col-start-2 text-white text-center self-end mb-4">Tic Tac Toe By : Marwan Ahmed Zahran</div>
   </body>
